<resources>
    <string name="app_name">EatHealthyLah</string>

    // Navigation Menu
    <string name="navigation_dashboard">HOME</string>
    <string name="navigation_wallet">WALLET</string>
    <string name="navigation_qrcode">QRCODE</string>
    <string name="navigation_maps">MAPS</string>
    <string name="navigation_profile">PROFILE</string>


    //DASHBOARD PAGE
    <string name="goalnoshow_headerValue">Please create a profile first</string>
    <string name="goal_headerName">Today\'s Goal</string>
    <string name="goal_caloriesHeader">Calories</string>
    <string name="goal_carbsHeader">Carbs</string>
    <string name="goal_proteinHeader">Protein</string>
    <string name="goal_fatsHeader">Fats</string>
    <string name="goal_sugarHeader">Sugar</string>
    <string name="goal_sodiumHeader">Sodium</string>
    <string name="goal_tooltip">* Secondary bar indicates last meal</string>
    <string name="pointsnoshow_headerValue">No previous points records</string>
    <string name="points_headerName">Points</string>
    <string name="points_pointsClaimButton">CLAIM</string>
    <string name="food_headerName">Past Meals</string>
    <string name="foodnoshow_headerValue">No past meals</string>


    //QR Code
    <string name="qrcode_title">Scan QR Code</string>
    <string name="qrcode_subtitle">Hold your camera to scan a QR Code for a food item. Please make sure it is by a valid vendor!</string>


    //QR Code Confirmation
    <string name="qrcodeconfirmation_textview_caloriesTitle">Calories:  </string>
    <string name="qrcodeconfirmation_textview_fatsTitle">Fats:  </string>
    <string name="qrcodeconfirmation_textview_proteinTitle">Protein:  </string>
    <string name="qrcodeconfirmation_textview_carbohydrateTitle">Carbohydrates:  </string>
    <string name="qrcodeconfirmation_textview_sodiumTitle">Sodium:  </string>
    <string name="qrcodeconfirmation_textview_sugarTitle">Sugar:  </string>
    <string name="qrcodeconfirmation_button_confirm">CONFIRM</string>


    //WALLET
    <string name="wallet_textview_balanceTitle">Balance: </string>
    <string name="wallet_textview_transactionsTitle">Transactions</string>
    <string name="wallet_button_topup">TOP UP</string>
    <string name="wallet_textview_notransactions">No Past Transactions</string>
    <string name="wallet_edittext_hint_amount">Amount</string>
    <string name="wallet_edittext_helper_amount">Enter Amount in S$</string>


    //PROFILE
    <string name="profile_button_delete">DELETE</string>
    <string name="profile_textview_noshowTitle">NO PROFILE LOADED</string>
    <string name="profile_textview_welcomeTitle">WELCOME BACK,</string>
    <string name="profile_textview_genderTitle">Gender</string>
    <string name="profile_textview_ageTitle">Age</string>
    <string name="profile_textview_heightTitle">Height</string>
    <string name="profile_textview_weightTitle">Weight</string>
    <string name="profile_textview_exerciseTitle">Exercise</string>


    //PROFILE EDIT FORM
    <string name="profile_header">EDIT PROFILE</string>
    <string name="profile_hint_name">Name</string>
    <string name="profile_helper_name">Enter your name</string>
    <string name="profile_hint_gender">Gender</string>
    <string name="profile_value_gender_male">MALE</string>
    <string name="profile_value_gender_female">FEMALE</string>
    <string name="profile_hint_age">Age</string>
    <string name="profile_helper_age">Enter your age</string>
    <string name="profile_hint_height">Height</string>
    <string name="profile_helper_height">Enter your height in CM</string>
    <string name="profile_hint_weight">Weight</string>
    <string name="profile_helper_weight">Enter your weight in KG</string>


    //FOOD CARD
    <string name="textview_caloriesHeader">Calories:</string>
    <string name="textview_carbohydratesHeader">Carbohydrates: </string>
    <string name="textview_proteinHeader">Protein:</string>
    <string name="textview_fatsHeader">Fats:</string>
    <string name="textview_sugarHeader">Sugar:</string>
    <string name="textview_sodiumHeader">Sodium:</string>


    //MAP STRINGS
    <string name="title_activity_maps">Map</string>
    <string name="map_location_title">Location: </string>
    <string name="map_capacity_title">Capacity: </string>
    <string name="map_stall_title">Stalls: </string>
    <string name="map_openinghour_title">Opening hours: </string>


</resources>
