<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_dashboard"/>

    <item android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_24dp"
        android:title="@string/navigation_wallet"/>

    <item android:id="@+id/navigation_qrcode"
        android:icon="@drawable/ic_qr_code_24dp"
        android:title="@string/navigation_qrcode"/>

    <item android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/navigation_maps"/>

    <item android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/navigation_profile"/>
</menu>