<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_editprofile_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/profile_header"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="7dp"
                android:hint="@string/profile_hint_name"
                app:helperText="@string/profile_helper_name"
                app:startIconDrawable="@drawable/ic_person_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_editprofile_inputfield_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:theme="@style/AppTheme" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_editprofile_gendertitle"
                    style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:drawableLeft="@drawable/ic_gender"
                    android:drawablePadding="16dp"
                    android:text="@string/profile_hint_gender"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/profile_editporfile_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/profile_editprofile_gender_male"
                        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/profile_value_gender_male" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/profile_editprofile_gender_female"
                        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_value_gender_female" />


                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="7dp"
                android:hint="@string/profile_hint_age"
                app:helperText="@string/profile_helper_age"
                app:startIconDrawable="@drawable/ic_birthday_cake">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_editprofile_inputfield_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:theme="@style/AppTheme" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="7dp"
                android:hint="@string/profile_hint_height"
                app:helperText="@string/profile_helper_height"
                app:startIconDrawable="@drawable/ic_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_editprofile_inputfield_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:theme="@style/AppTheme" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="7dp"
                android:hint="@string/profile_hint_weight"
                app:helperText="@string/profile_helper_weight"
                app:startIconDrawable="@drawable/ic_weight_scale">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_editprofile_inputfield_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:theme="@style/AppTheme" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>